--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-AutomationSuite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-AutomationSuite" title="Test.PIMTests" class="method navigator-link" hash-for-method="PIMSuite">PIMSuite</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-AutomationSuite" title="Test.LeaveTests" class="method navigator-link" hash-for-method="LeaveSuite">LeaveSuite</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-AutomationSuite -->
@@ -118,6 +118,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-AutomationSuite" title="Test.LoginTests" class="method navigator-link" hash-for-method="LoginSuite">LoginSuite</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-AutomationSuite" title="Test.PIMTests" class="method navigator-link" hash-for-method="PIMSuite">PIMSuite</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-AutomationSuite -->
@@ -135,35 +140,28 @@
           <div class="suite-AutomationSuite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">Test.PIMTests</span>
+              <span class="class-name">Test.LeaveTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="PIMSuite">
-                  </a> <!-- PIMSuite -->
-                  <span class="method-name">PIMSuite</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchSessionException: invalid session id
+                  <a name="LeaveSuite">
+                  </a> <!-- LeaveSuite -->
+                  <span class="method-name">LeaveSuite</span>
+                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of element located by By.name: username (tried for 10 second(s) with 500 milliseconds interval)
 Build info: version: &apos;4.36.0&apos;, revision: &apos;6d115cfd87&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [1c20be81f99b147248b2797179656480, get {url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 142.0.7444.176, chrome: {chromedriverVersion: 142.0.7444.175 (302067f14a4..., userDataDir: C:\Users\hp\AppData\Local\T...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53426}, goog:processID: 14568, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:53426/devtoo..., se:cdpVersion: 142.0.7444.176, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 1c20be81f99b147248b2797179656480
-	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:557)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:325)
-	at utilites.MainFunctions.navigateTo(MainFunctions.java:33)
-	at utilites.MainFunctions.performLogin(MainFunctions.java:41)
-	at Test.PIMTests.PIMSuite(PIMTests.java:71)
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 142.0.7444.176, chrome: {chromedriverVersion: 142.0.7444.175 (302067f14a4..., userDataDir: C:\Users\hp\AppData\Local\T...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53686}, goog:processID: 25992, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:53686/devtoo..., se:cdpVersion: 142.0.7444.176, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: e0b4101f162b201780d33a794cefa765
+	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
+	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
+	at POM.POMlogin.waitForLoginPage(POMlogin.java:91)
+	at utilites.MainFunctions.performLoginWithoutLogout(MainFunctions.java:69)
+	at Test.LeaveTests.LeaveSuite(LeaveTests.java:71)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
 	at Driver.RegressionDriver.main(RegressionDriver.java:32)
-... Removed 25 stack frames
+... Removed 22 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -180,6 +178,21 @@ Session ID: 1c20be81f99b147248b2797179656480
                   <a name="LoginSuite">
                   </a> <!-- LoginSuite -->
                   <span class="method-name">LoginSuite</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-AutomationSuite-class-passed -->
+          <div class="suite-AutomationSuite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">Test.PIMTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="PIMSuite">
+                  </a> <!-- PIMSuite -->
+                  <span class="method-name">PIMSuite</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -250,20 +263,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginSuite')
-data.setCell(0, 2, 'Test.LoginTests')
-data.setCell(0, 3, 55501);
+data.setCell(0, 1, 'PIMSuite')
+data.setCell(0, 2, 'Test.PIMTests')
+data.setCell(0, 3, 19841);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'PIMSuite')
-data.setCell(1, 2, 'Test.PIMTests')
-data.setCell(1, 3, 29);
+data.setCell(1, 1, 'LeaveSuite')
+data.setCell(1, 2, 'Test.LeaveTests')
+data.setCell(1, 3, 10925);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'LoginSuite')
+data.setCell(2, 2, 'Test.LoginTests')
+data.setCell(2, 3, 939);
 window.suiteTableData['AutomationSuite']= { tableData: data, tableDiv: 'times-div-AutomationSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 55 seconds</span>
+              <span class="suite-total-time">Total running time: 31 seconds</span>
               <div id="times-div-AutomationSuite">
               </div> <!-- times-div-AutomationSuite -->
             </div> <!-- times-div -->
@@ -278,9 +295,18 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-AutomationSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">Test.LeaveTests</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">beforeSuiteSetup</span>
+                <br/>
+                <span class="ignored-method-name">afterSuiteCleanup</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
               <span class="ignored-class-name">Test.PIMTests</span>
               <div class="ignored-methods-div">
@@ -305,31 +331,42 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">getMethodname(public void Test.LoginTests.LoginSuite() throws java.io.IOException,java.lang.InterruptedException)</span>
-                <span class="method-start">5194 ms</span>
+                <span class="method-start">4923 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginSuite</span>
-                <span class="method-start">5206 ms</span>
+                <span class="method-start">4928 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Test.PIMTests</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">getMethodname(public void Test.PIMTests.PIMSuite() throws java.io.IOException,java.lang.InterruptedException)</span>
-                <span class="method-start">60725 ms</span>
+                <span class="method-start">5896 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">PIMSuite</span>
+                <span class="method-start">5900 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Test.LeaveTests</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">getMethodname(public void Test.LeaveTests.LeaveSuite() throws java.io.IOException,java.lang.InterruptedException)</span>
+                <span class="method-start">25749 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">PIMSuite</span>
-                <span class="method-start">60727 ms</span>
+                <span class="method-name">LeaveSuite</span>
+                <span class="method-start">25751 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Test.LoginTests</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuiteCleanup</span>
-                <span class="method-start">60936 ms</span>
+                <span class="method-start">36850 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
