--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                    <span class="method-stats">3 methods, 2 failed,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -104,6 +104,11 @@
                       <span>
                         <img src="failed.png" width="3%"/>
                         <a href="#" panel-name="suite-AutomationSuite" title="Test.LeaveTests" class="method navigator-link" hash-for-method="LeaveSuite">LeaveSuite</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-AutomationSuite" title="Test.PIMTests" class="method navigator-link" hash-for-method="PIMSuite">PIMSuite</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-AutomationSuite -->
@@ -118,11 +123,6 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-AutomationSuite" title="Test.LoginTests" class="method navigator-link" hash-for-method="LoginSuite">LoginSuite</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-AutomationSuite" title="Test.PIMTests" class="method navigator-link" hash-for-method="PIMSuite">PIMSuite</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-AutomationSuite -->
@@ -152,13 +152,43 @@
 Build info: version: &apos;4.36.0&apos;, revision: &apos;6d115cfd87&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 142.0.7444.176, chrome: {chromedriverVersion: 142.0.7444.175 (302067f14a4..., userDataDir: C:\Users\hp\AppData\Local\T...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53686}, goog:processID: 25992, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:53686/devtoo..., se:cdpVersion: 142.0.7444.176, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: e0b4101f162b201780d33a794cefa765
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 142.0.7444.176, chrome: {chromedriverVersion: 142.0.7444.175 (302067f14a4..., userDataDir: C:\Users\hp\AppData\Local\T...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:65145}, goog:processID: 11648, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:65145/devtoo..., se:cdpVersion: 142.0.7444.176, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 2cc4f1c48da886e915dfb69e2d37e6d6
 	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
 	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
 	at POM.POMlogin.waitForLoginPage(POMlogin.java:91)
 	at utilites.MainFunctions.performLoginWithoutLogout(MainFunctions.java:69)
 	at Test.LeaveTests.LeaveSuite(LeaveTests.java:71)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+	at Driver.RegressionDriver.main(RegressionDriver.java:32)
+... Removed 22 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-AutomationSuite-class-failed -->
+          <div class="suite-AutomationSuite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">Test.PIMTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="PIMSuite">
+                  </a> <!-- PIMSuite -->
+                  <span class="method-name">PIMSuite</span>
+                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of element located by By.name: username (tried for 10 second(s) with 500 milliseconds interval)
+Build info: version: &apos;4.36.0&apos;, revision: &apos;6d115cfd87&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 142.0.7444.176, chrome: {chromedriverVersion: 142.0.7444.175 (302067f14a4..., userDataDir: C:\Users\hp\AppData\Local\T...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:65145}, goog:processID: 11648, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:65145/devtoo..., se:cdpVersion: 142.0.7444.176, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 2cc4f1c48da886e915dfb69e2d37e6d6
+	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
+	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
+	at POM.POMlogin.waitForLoginPage(POMlogin.java:91)
+	at utilites.MainFunctions.performLoginWithoutLogout(MainFunctions.java:69)
+	at Test.PIMTests.PIMSuite(PIMTests.java:68)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
 	at Driver.RegressionDriver.main(RegressionDriver.java:32)
 ... Removed 22 stack frames
@@ -178,21 +208,6 @@ Session ID: e0b4101f162b201780d33a794cefa765
                   <a name="LoginSuite">
                   </a> <!-- LoginSuite -->
                   <span class="method-name">LoginSuite</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-AutomationSuite-class-passed -->
-          <div class="suite-AutomationSuite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">Test.PIMTests</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="PIMSuite">
-                  </a> <!-- PIMSuite -->
-                  <span class="method-name">PIMSuite</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -265,22 +280,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'PIMSuite')
-data.setCell(0, 2, 'Test.PIMTests')
-data.setCell(0, 3, 19841);
+data.setCell(0, 1, 'LoginSuite')
+data.setCell(0, 2, 'Test.LoginTests')
+data.setCell(0, 3, 39088);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LeaveSuite')
-data.setCell(1, 2, 'Test.LeaveTests')
-data.setCell(1, 3, 10925);
+data.setCell(1, 1, 'PIMSuite')
+data.setCell(1, 2, 'Test.PIMTests')
+data.setCell(1, 3, 13808);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'LoginSuite')
-data.setCell(2, 2, 'Test.LoginTests')
-data.setCell(2, 3, 939);
+data.setCell(2, 1, 'LeaveSuite')
+data.setCell(2, 2, 'Test.LeaveTests')
+data.setCell(2, 3, 13672);
 window.suiteTableData['AutomationSuite']= { tableData: data, tableDiv: 'times-div-AutomationSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 31 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-AutomationSuite">
               </div> <!-- times-div-AutomationSuite -->
             </div> <!-- times-div -->
@@ -331,42 +346,44 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">getMethodname(public void Test.LoginTests.LoginSuite() throws java.io.IOException,java.lang.InterruptedException)</span>
-                <span class="method-start">4923 ms</span>
+                <span class="method-start">3458 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginSuite</span>
-                <span class="method-start">4928 ms</span>
+                <span class="method-start">3461 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Test.PIMTests</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">getMethodname(public void Test.PIMTests.PIMSuite() throws java.io.IOException,java.lang.InterruptedException)</span>
-                <span class="method-start">5896 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">PIMSuite</span>
-                <span class="method-start">5900 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">Test.LeaveTests</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">getMethodname(public void Test.LeaveTests.LeaveSuite() throws java.io.IOException,java.lang.InterruptedException)</span>
-                <span class="method-start">25749 ms</span>
+                <span class="method-start">42563 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">LeaveSuite</span>
-                <span class="method-start">25751 ms</span>
+                <span class="method-name">PIMSuite</span>
+                <span class="method-start">42569 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Test.LeaveTests</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">LeaveSuite</span>
+                <span class="method-start">56391 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">getMethodname(public void Test.LeaveTests.LeaveSuite() throws java.io.IOException,java.lang.InterruptedException)</span>
+                <span class="method-start">56391 ms</span>
+              </div> <!-- configuration-method before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Test.LoginTests</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuiteCleanup</span>
-                <span class="method-start">36850 ms</span>
+                <span class="method-start">70298 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
